# fuji

./: Makefile  README.md  TODO  pyproject.toml
_fuji/: __init__.py  __main__.py  _commands.py  commands.py  setup.py
_fuji/ext/: fuji.py  server.py
fuji/: __main__.py  commands.py  core.py  server.py  server_properties.py  servers.py  tmux.py
fuji-rs/: Cargo.toml
