[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuji"
description = "A command-line tool for managing Minecraft servers."
requires-python = ">=3.10"
dependencies = [
    "ndg.clap>=0.1.3",
    "overrides>=7.4.0",
    "requests>=2.25.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[project.scripts]
fuji = "fuji.__main__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "fuji.__version__"}

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
